extract logged user from utils method